fixing bug on firefox

--- a/app/css/_base.scss
+++ b/app/css/_base.scss
@@ -3,6 +3,10 @@ body {
   font-size: 16px !important;
 }
 
+img[src=""] {
+   display: none;
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
