--- a/app/css/_board.scss
+++ b/app/css/_board.scss
@@ -1,5 +1,5 @@
 .column {
-	margin-right: 1.8em;
+	margin-right: 2.2%;
 }
 
 .issue {
